--- a/Конфигурация сервера.md
+++ b/Конфигурация сервера.md
@@ -1,4 +1,7 @@
 # Задача №2 (Конфигурация сервера)  
 ## Требуется произвести конфигурацию СУБД сервер «Pangolin DB»!  
 
-### Укжите комманду `psql` очистки настроек _postgresql.auto.conf_?
+### Дополните комманду `psql` получения списка настроек «Pangolin DB»?
+postgres=# select seqno, sourcefile, sourceline, name, setting from _Дополните команду_;  _(верный ответ `pg_file_settings`)_
+
+### Укажите комманду `psql` очистки настроек _postgresql.auto.conf_?
