--- a/Конфигурация сервера.md
+++ b/Конфигурация сервера.md
@@ -2,6 +2,10 @@
 ## Требуется произвести конфигурацию СУБД сервер «Pangolin DB»!  
 
 ### Дополните комманду `psql` получения списка настроек «Pangolin DB»?
-postgres=# select seqno, sourcefile, sourceline, name, setting from _Дополните команду_;  _(верный ответ `pg_file_settings`)_
+postgres=# select seqno, sourcefile, sourceline, name, setting from _`Дополните команду`_;  _(верный ответ `pg_file_settings`)_
+
+### Дополните комманду `psql` для просмотра порта в настройках.
+SELECT name,setting FROM pg_settings where _`Дополните команду`_ \gx  _(верный ответ `name='port'`)_
 
 ### Укажите комманду `psql` очистки настроек _postgresql.auto.conf_?
+SELECT name,setting FROM pg_settings where name='port' \gx
