--- a/Конфигурация сервера.md
+++ b/Конфигурация сервера.md
@@ -8,4 +8,4 @@ postgres=# SELECT seqno, sourcefile, sourceline, name, setting FROM _`Допол
 postgres=# SELECT name,setting FROM pg_settings where _`Дополните команду`_ \gx _(верный ответ `name='port'`)_
 
 ### Укажите комманду `psql` очистки настроек _postgresql.auto.conf_?
-postgres=# _`Дополните команду`_; (верный ответ `ALTER SYSTEM RESET ALL`)_
+postgres=# _`Дополните команду`_; _(верный ответ `ALTER SYSTEM RESET ALL`)_
