--- a/Конфигурация сервера.md
+++ b/Конфигурация сервера.md
@@ -1,11 +1,14 @@
 # Задача №2 (Конфигурация сервера)  
-## Требуется произвести конфигурацию СУБД сервер «Pangolin DB»!  
+## Вам требуется произвести переконфигурацию СУБД сервер «Pangolin DB» используя систему команд `psql`!  
 
-### Дополните комманду `psql` получения списка настроек «Pangolin DB»?
-postgres=# SELECT seqno, sourcefile, sourceline, name, setting FROM _`Дополните команду`_; _(верный ответ `pg_file_settings`)_
+### Дополните комманду `psql` получения списка настроек «Pangolin DB»?  
+postgres=# SELECT seqno, sourcefile, sourceline, name, setting FROM _`Дополните команду`_; _(верный ответ `pg_file_settings`)_  
 
-### Дополните комманду `psql` для просмотра порта в настройках.
-postgres=# SELECT name,setting FROM pg_settings where _`Дополните команду`_ \gx _(верный ответ `name='port'`)_
+### Дополните комманду `psql` для просмотра конфигурации порта в настройках, аналогично возможно просмотреть и иные настройки.  
+postgres=# SELECT name,setting FROM pg_settings where _`Дополните команду`_ \gx _(верный ответ `name='port'`)_  
 
-### Укажите комманду `psql` очистки настроек _postgresql.auto.conf_?
+### Дополните комманду `psql` очистки настроек _postgresql.auto.conf_?  
 postgres=# _`Дополните команду`_; _(верный ответ `ALTER SYSTEM RESET ALL`)_
+
+### Дополните комманду `psql` назначения параметров максимального количества подключений `max_connections = 110`?
+postgres=# _`Дополните команду`_; _(верный ответ `ALTER SYSTEM SET max_connections TO 110;`)_   
